--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,20 @@
             "type": "java",
             "name": "Main",
             "request": "launch",
+            "mainClass": "Main",
+            "projectName": "JNP-Proj1_cea063c3"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "MainFolder.Main",
+            "projectName": "JNP-Proj1_ac90d5c8"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
             "mainClass": "MainFolder.Main",
             "projectName": "JNP-Proj1_cea063c3"
         },
